--- a/EXPD Semesterarbeit/School shootings.qmd
+++ b/EXPD Semesterarbeit/School shootings.qmd
@@ -1,27 +1,87 @@
 ---
-title: "School shootings"
+title: "Aufgabe 3, School shootings"
 author: "Gamper Gian, Bratschi Jonas"
 format: pdf
 editor: visual
+output:
+  pdf_document:
+    toc: true
+    page_breaks: "before"
 ---
 
-## Quarto
+{{< pagebreak >}}
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
+```{r include=FALSE}
+#| label: setup
+setwd("C:\\Users\\jonas\\OneDrive\\Dokumente\\GitHub\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+# setwd("C:\\Users\\glm87\\Documents\\GITHUB\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+library(readr)
+library("ggplot2")
+dat <- read_csv("school-shootings-data.csv")
 ```
 
-You can add options to executable code like this
-
 ```{r}
-#| echo: false
-2 * 2
+# Age of Shooter
+vec_shooter_age <- c(dat$age_shooter1,dat$age_shooter2) 
+vec_shooter_age <- na.exclude(vec_shooter_age)
+
+hist(vec_shooter_age, col = "lightblue", xlab = "Age [Years]",
+     main = "Age of school shooters", ylab = "Density",
+     breaks = c(seq(0, 80, by = 1)),
+     las = 1, freq = FALSE)
+axis(side=1, at=seq(0, 100, by=10))
+median_age_shooter <- median(vec_shooter_age,na.rm = TRUE)
+abline(v = median_age_shooter, col = "red", lty = 1, lwd = 2)
+legend("top", legend = paste("Median =", median_age_shooter), col = "red", lty = 1, lwd = 2)
+
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+{{< pagebreak >}}
+
+```{r}
+# Number schoolshootings
+hist(dat$year,
+     breaks = c(seq(1999, 2023)),
+     main = "Numbers of school shootings in the US since 1999",
+     xaxt = "n",
+     xlab = "Years",
+     col = "lightblue")
+axis(side = 1, at = seq(1999, 2023, by = 1), las = 2)
+
+meanshootings <- length(dat$year)/length(unique(dat$year))
+
+# Median
+mediantable <- table(dat$year)
+medianshootings <- median(c(mediantable))
+
+# Add Median and Legend to plot
+abline(h = medianshootings, col = "red", lty = 1, lwd = 2)
+legend("top", legend = paste("Median Shootings: ", round(medianshootings, 2)), col = "red", lty = 1, lwd = 2)
+
+```
+
+{{< pagebreak >}}
+
+```{r}
+plot(x = dat$age_shooter1,
+     y = dat$casualties,
+     col = adjustcolor("black", alpha = 0.2),
+     pch = 19,
+     main = "Shooter Age / Number of casualties",
+     ylab = "Number of casualties",
+     xlab = "Age of the shooter",
+     log = "y",
+     )
+abline(v = median_age_shooter, col = "red", lwd = 2)
+legend("topright", legend = paste("Median age of shooter: ", round(median_age_shooter, 2)), col = "red", lty = 1, lwd = 2)
+```
+
+{{< pagebreak >}}
+
+```{r}
+# DIAGRAMM 2
+
+diag_shooting_type <- ggplot(dat, aes(x = casualties, y = shooting_type)) +
+  geom_boxplot()
+diag_shooting_type + labs(x = "Casualties" , y = "Shooting Type" , title ="Casulties per shooting Type"  )
+```
