--- a/EXPD Semesterarbeit/School shootings.qmd
+++ b/EXPD Semesterarbeit/School shootings.qmd
@@ -13,8 +13,8 @@ output:
 
 ```{r include=FALSE}
 #| label: setup
-setwd("C:\\Users\\jonas\\OneDrive\\Dokumente\\GitHub\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
-# setwd("C:\\Users\\glm87\\Documents\\GITHUB\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+#setwd("C:\\Users\\jonas\\OneDrive\\Dokumente\\GitHub\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+ setwd("C:\\Users\\glm87\\Documents\\GITHUB\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
 library(readr)
 library("ggplot2")
 dat <- read_csv("school-shootings-data.csv")
