--- a/EXPD Semesterarbeit/School shootings.qmd
+++ b/EXPD Semesterarbeit/School shootings.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Aufgabe 3, School shootings"
+title: "Semesterarbeit Explorative Datenanalyse"
 author: "Gamper Gian, Bratschi Jonas"
 format: pdf
 editor: visual
@@ -12,15 +12,22 @@ output:
 {{< pagebreak >}}
 
 ```{r include=FALSE}
-#| label: setup
-#setwd("C:\\Users\\jonas\\OneDrive\\Dokumente\\GitHub\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
- setwd("C:\\Users\\glm87\\Documents\\GITHUB\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+setwd("C:\\Users\\jonas\\OneDrive\\Dokumente\\GitHub\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+#setwd("C:\\Users\\glm87\\Documents\\GITHUB\\EXPD-Semesterarbeit\\EXPD Semesterarbeit")
+# install.packages("ggplot2")
+library(ggplot2)
 library(readr)
-library("ggplot2")
 dat <- read_csv("school-shootings-data.csv")
 ```
 
-```{r}
+# Einleitung
+
+In dieser Semesterarbeit analysieren wir Daten zu Schießereien der letzten drei Jahrzehnte an US-Amerikanischen Schulen. Der Datensatz umfasst, basierend auf Forschung von Pah/Amaral/Hagan und Wikipedia,  eine Bandbreite von Vorfällen, von unbeabsichtigten Schüssen bis zu Massenmorden. Im Fokus steht die relative Gefährdung von Schülern durch Schusswaffen, unabhängig von den Tätermotiven. Den Datensatz stammt von der Website Kaggle (https://www.kaggle.com/code/ecodan/us-school-shootings-dataset).
+
+
+# Tabelle mit den wichtigsten Variabeln und ersten Werten
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 # Age of Shooter
 vec_shooter_age <- c(dat$age_shooter1,dat$age_shooter2) 
 vec_shooter_age <- na.exclude(vec_shooter_age)
@@ -34,17 +41,21 @@ median_age_shooter <- median(vec_shooter_age,na.rm = TRUE)
 abline(v = median_age_shooter, col = "red", lty = 1, lwd = 2)
 legend("top", legend = paste("Median =", median_age_shooter), col = "red", lty = 1, lwd = 2)
 
+
 ```
 
 {{< pagebreak >}}
 
-```{r}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+
 # Number schoolshootings
 hist(dat$year,
      breaks = c(seq(1999, 2023)),
      main = "Numbers of school shootings in the US since 1999",
      xaxt = "n",
      xlab = "Years",
+     ylab = "Occurences",
+
      col = "lightblue")
 axis(side = 1, at = seq(1999, 2023, by = 1), las = 2)
 
@@ -60,9 +71,15 @@ legend("top", legend = paste("Median Shootings: ", round(medianshootings, 2)), c
 
 ```
 
+
+Dieses Histogramm visualisiert die Anzahl an Schiessereien an Schulen für jedes Jahr, seit 1999. Der Median seit 1999 liegt hierbei bei 12 vorfällen pro Jahr. Über die Aussage des Medians in dieser Grafik lässt sich streiten. Nichtsdestotrotz ist aber eine klare zunahme der Fälle seit 2017 zu erkennen.
+
+
 {{< pagebreak >}}
 
-```{r}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+
+# Shooter Age / Number of casualties
 plot(x = dat$age_shooter1,
      y = dat$casualties,
      col = adjustcolor("black", alpha = 0.2),
@@ -76,20 +93,23 @@ abline(v = median_age_shooter, col = "red", lwd = 2)
 legend("topright", legend = paste("Median age of shooter: ", round(median_age_shooter, 2)), col = "red", lty = 1, lwd = 2)
 ```
 
+In diesem Scatterplot sind auf der X-Achse die Altersangaben der Schützen und auf der Y-Achse die Anzahl der "Casualties" dargestellt, also der Toten und Verwundeten. Der Median des Schützenalters liegt bei 16 Jahren. Deutlich wird in der Grafik, dass diejenigen, die erheblichen Schaden verursacht haben, größtenteils im Altersbereich von 14 bis 20 Jahren anzutreffen sind. Dies legt nahe, dass diese Schützen möglicherweise klare Absichten hatten und entschlossen handelten, wobei wir annehmen, dass das Tatmotiv in dieser Altersgruppe wahrscheinlich auf einen Amoklauf zurückzuführen ist. Andererseits fällt auf, dass es sowohl sehr junge als auch sehr alte Schützen gibt, bei denen wir davon ausgehen, dass es sich hauptsächlich um Unfälle handelt.
+
+
 {{< pagebreak >}}
 
-```{r}
-# DIAGRAMM 2
-
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+# Casulties per shooting Type
 diag_shooting_type <- ggplot(dat, aes(x = casualties, y = shooting_type)) +
   geom_boxplot()
 diag_shooting_type + labs(x = "Casualties" , y = "Shooting Type" , title ="Casulties per shooting Type"  )
 ```
 
-```{r}
-install.packages("ggmosaic", dependencies = T)
-library(ggmosaic)
+{{< pagebreak >}}
 
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+# Killed vs injured
+library(ggmosaic)
 library(readr)
 US_partys <- read_csv("US partys.csv")
 
@@ -105,39 +125,30 @@ party_colors <- c("Democratic" = "blue", "Republican" = "red")
 
 ggplot(data = dat, aes(x = injured, y = killed, color = dominant_party, shape = school_type)) +
   geom_point(position = position_jitter(width = 0.2, height = 0.2)) +
-  scale_color_manual(values = party_colors)
-
-ggplot(data = dat, aes(x = dominant_party, fill = dominant_party)) +
-  geom_bar() +
-  scale_fill_manual(values = party_colors)
+  scale_color_manual(values = party_colors) +
+  ggtitle("Injuries and Killings by Party Affiliation and School Type")
 
 ```
 
-```{r}
+In diesem Diagramm sind auf der X-Achse die Anzahl der verletzten Personen und auf der Y-Achse die Anzahl der getöteten Personen pro Vorfall dargestellt. Zusätzlich haben wir unseren Datensatz durch Informationen zur politischen Ausrichtung jedes Bundesstaates erweitert, die aus dem Wahljahr 2020 stammen. Die Symbole der Datenpunkte geben zudem Auskunft darüber, ob es sich um eine öffentliche oder private Schule handelt. Bemerkenswert ist, dass Schießereien anscheinend überwiegend an öffentlichen Schulen auftreten. Des Weiteren fällt auf, dass Schießereien mit vielen Toten und Verletzten hauptsächlich in demokratischen Staaten stattzufinden scheinen. Wir gehen davon aus, dass diese Korrelation auf eine Vielzahl von Faktoren zurückzuführen ist. Hierbei könnten die Hauptfaktoren unter anderem die Strenge der Waffengesetze, der allgemeine Zugang zu Waffen, sozioökonomische Unterschiede sowie die generelle politische Lage in den Bundesstaaten sein.
 
-dat <- read_csv("school-shootings-data.csv")
+Wichtig ist aber, dass man anhnand von dieser Grafik keine Kausalität ableitet. Und auch das Simpsonsche Paradoxon ist hier nicht zu vernachlässigen, könnte es zum Beispiel sein, dass in demokratischen Staaten mehr Schulen sind oder allgemein die Bevölkerung jünger ist und somit mehr Personen zur Schule gehen?
+
+{{< pagebreak >}}
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+# Killed vs gpc
+library(ggmosaic)
+library(readr)
 guns <- read_csv("gun_pc_23.csv")
 dat <- merge(dat, guns[,c("state", "gpc")],
              by = "state",
              all.x = TRUE)
 
 
-US_partys <- read_csv("US partys.csv")
-
-US_partys$dominant_party <- ifelse(US_partys$`Republican/lean Rep.` > US_partys$`Democrat/lean Dem.`, "Republican", "Democratic")
-names(US_partys)[names(US_partys) == "State"] <- "state"
-
-
-dat <- merge(dat, US_partys[,c("state", "dominant_party")],
-             by = "state",
-             all.x = TRUE)
-
-party_colors <- c("Democratic" = "blue", "Republican" = "red")
-
 ggplot(data = dat, aes(x = gpc, y = killed, color = dominant_party)) +
   geom_point(position = position_jitter(width = 0.2, height = 0.2)) +
-  scale_color_manual(values = party_colors)
-
-
+  scale_color_manual(values = party_colors) +
+  ggtitle("Gun Ownership per Capita vs. Killings by Party Affiliation")
 
 ```
